...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="Mentees"
            app:layout_constraintBottom_toTopOf="@+id/userRecyclerMentor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHomePageTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userRecyclerMentor"
...
